[package]
name = "raytracer"
version = "0.1.0"
authors = ["Michael Holub <michael.holub@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra-glm = "0.7.0"
rand = "0.7.3"
rayon = "1.3.1"

[profile.dev]
opt-level = 2